
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int exp; scalar_t__ man; } ;
union IEEEf2bits {float f; TYPE_1__ bits; } ;



int
__isinff(float f)
{
 union IEEEf2bits u;

 u.f = f;
 return (u.bits.exp == 255 && u.bits.man == 0);
}
